actualizo los ejercicios

--- a/ejercicios/tema 4/galeria imagenes/galeria_imagenes.html
+++ b/ejercicios/tema 4/galeria imagenes/galeria_imagenes.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link href="estilo.css" rel="stylesheet">
         <script src="galeria_imagenes.js"></script>
+        <script src="https://hammerjs.github.io/dist/hammer.js"></script>
     </head>
     <body>
         <div id=numeracion></div>
