actualizacion de jercicios

--- a/ejercicios/tema 2/worksheet 6/ejercicio2.html
+++ b/ejercicios/tema 2/worksheet 6/ejercicio2.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <script src="ejercicio2.js"></script>
-    <img src="linux.jpg">
-    <img src="windows.jpg">
+    <img src="linux.jpg" width="200" height="200">
+    <img src="windows.jpg" width="200" height="200">
+    <br>
     <a href="https://www.facebook.com/">facebook</a>
     <a href="https://www.marca.com/">marca</a>
+    <br>
+    <script src="ejercicio2.js"></script>
 </body>
 </html>
