--- a/ejercicios/tema 4/worksheet 2/ejercicio 1.html
+++ b/ejercicios/tema 4/worksheet 2/ejercicio 1.html
@@ -6,7 +6,7 @@
     <link href="estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <form>
+    <form action="#">
         <fieldset id="texto">
             <legend>Crear nuevo libro</legend>
             <label for="titulo">Titulo</label><br>
@@ -25,6 +25,8 @@
     </form>
     <div id="lista">
         <h1>Mi lista de libros</h1>
+        <ul>
+        </ul>
     </div>
 </body>
 </html>
