actualizo ejercicio juego

--- a/ejercicios/tema 3/worksheet 5/ejercicioJuego.html
+++ b/ejercicios/tema 3/worksheet 5/ejercicioJuego.html
@@ -20,6 +20,6 @@
         <p><button id="piedra2">Piedra</button><button id="papel2">Papel</button><button id="tijera2">Tijera</button></p>
     </div>
     <p><button id="jugar">Comprobar resultado</button></p>
-    <div id="resultado"></div>
+    <p id="resultado"></p>
 </body>
 </html>
