ejercicio juego terminado

--- a/ejercicios/tema 3/worksheet 5/ejercicioJuego.html
+++ b/ejercicios/tema 3/worksheet 5/ejercicioJuego.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="ejercicioJuego.js"></script>
+    <script src="ejercicioJuego.js" type="module"></script>
+    <script type="module" src="clase_jugador.js"></script>
+    <script type="module" src="clase_juego.js"></script>
     <link href="estilo.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <h1>JUEGO PIEDRA, PAPEL Y TIJERA</h1>
