actualizo ejercicio ping pong

--- a/ejercicios/tema 5/juego ping pong/index.html
+++ b/ejercicios/tema 5/juego ping pong/index.html
@@ -8,8 +8,12 @@
     <link href="estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>MARCADOR</h1>
-    <h2 id="marcador"></h2>
+    <div id="iz">q: Subir &nbsp &nbsp a: Bajar</div>
+    <div>
+        <h1>MARCADOR</h1>
+        <h2 id="marcador">0 : 0</h2>
+    </div>
+    <div id="der">p: Subir &nbsp &nbsp l: Bajar</div>
     <svg id="panel" height="75vh" width="100%"></svg>
 </body>
 </html>
