actualizo ping pong con marcador

--- a/ejercicios/tema 5/juego ping pong/index.html
+++ b/ejercicios/tema 5/juego ping pong/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div id="iz">q: Subir &nbsp &nbsp a: Bajar</div>
+    <div id="velocidad">Velocidad de la bola:</div>
+    <div id="velocidad1"><input type="button" value="Lenta"></div>
+    <div id="velocidad2"><input type="button" value="Media"></div>
+    <div id="velocidad3"><input type="button" value="Rapida"></div>
     <div>
         <h1>MARCADOR</h1>
         <h2 id="marcador">0 : 0</h2>
