--- a/ejercicios/tema 5/juego ping pong/index.html
+++ b/ejercicios/tema 5/juego ping pong/index.html
@@ -18,6 +18,7 @@
         <h2 id="marcador">0 : 0</h2>
     </div>
     <div id="der">p: Subir &nbsp &nbsp l: Bajar</div>
+    <div id="pausa"><input type="button" value="Pausa"></div>
     <svg id="panel" height="75vh" width="100%"></svg>
 </body>
 </html>
